# multiplayer-game-uni-cw

./: README.md  meson.build
gameclient/: copy  notes.md
gameclient/src/: common.h  defs.h  main.c  misc.c  misc.h  pizza.c  player.c  server.c  server.h  sockets.c  sockets.h  structs.h
server/libsockets/: notes.md  sockets.cpp  sockets.hpp
server/src/: main.cpp
server/tests/: libsocket_test_client.cpp  libsocket_test_server.cpp
